# rust-2048

./: .gitignore  Cargo.toml  LICENSE  README.md  achievements.txt
src/: achievements.rs  ai.rs  app.rs  board.rs  main.rs  number_renderer.rs  settings.rs  tile.rs
