[package]
name = "rust-2048"
version = "0.0.0"
authors = ["coeuvre <coeuvre@gmail.com>"]

[[bin]]
name = "rust-2048"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.3.7"
piston_window = "0.127.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.82.0"